# Sierra

./: .gitignore  ARCHITECTURE.md  MCP.md  README.md  pyproject.toml
.claude/: settings.local.json
dashboard/: __init__.py  app.py
dashboard/components/: activities.py  body.py  garmin_import.py  imports.py  mcp.py  nutrition.py  overview.py  resting_hr.py  sidebar.py  strength.py  vo2max.py  weight.py
dashboard/utils/: __init__.py  db.py  queries.py
health_import/: __init__.py  __main__.py
health_import/cli/: main.py
health_import/core/: __init__.py  conflicts.py  database.py  logging_setup.py  models.py
health_import/garmin/: __init__.py  activities.py  vo2max.py  weight.py
health_import/importers/: __init__.py  apple_resting_hr.py  base.py  garmin_activities.py  garmin_vo2max.py  garmin_weight.py  macrofactor.py  six_week.py
health_import/mcp/: __init__.py  __main__.py  activity.py  config.py  nutrition.py  resting_hr.py  server.py  strength.py  vo2max.py  weight.py
health_import/transforms/: __init__.py  datetime_utils.py  units.py
schema/: init.sql
scripts/: compare_sources.py  inspect_db.py  migrate_garmin_schema.py  show_conflicts.py  start_dashboard.bat  start_dashboard.py  test_garmin.py  test_import.py  test_mcp.py
